--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "peerDependencies": {
     "leaflet": "^1.0.0",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
-    "react-leaflet": "^1.0.0"
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0  || ^16.0.0",
+    "react-leaflet": "^1.0.0",
+    "prop-types": "^15.6.0"
   }
 }
